# goit-core-hw-07

./: functionality_for_bot.py  main.py  pyproject.toml
project/: main.py
